--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  height: 100%;
+  font-family: "Montserrat";
+  
+}
+
+.root {
+  position: relative;
+}
+.main-wrapper {
   text-align: center;
+  font-weight: 300;
+  color: black;
+  background-color: #C2E6F4;
+  padding: 40px;
+  margin: 40px auto;
+  transition: all 0.4s ease-in;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 40px;
+  font-weight: 400;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p {
+  font-size: 13px;
+  margin: 30px auto 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+form input {
+  margin: 20px 10px 10px;
+  padding: 12px;
+  border: none;
+  outline: none;
+  border-radius: 7px;
+  background: #f1f1f1;
 }
 
-.App-link {
-  color: #61dafb;
+form button {
+  display: block;
+  margin: 20px auto;
+  padding: 10px 80px;
+  border: none;
+  outline: none;
+  border-radius: 7px;
+  background-color: #F37474;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form button:active {
+  transform: translateY(4px);
+  outline: none;
+  border: none;
 }
